tests/test_assets/semantic/invalid/arrays/temporary_index_target.expected
semantic error at line 9: assignment target is not assignable
1 semantic error generated.
